--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "ext-php-decimal": "*",
+        "ext-decimal": "*",
         "phpstan/phpstan": "^0.11.7"
     },
     "autoload": {
